--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,2 +1,10 @@
-﻿XXX
+---
+layout: base
+---
+
+<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
+<blockquote>
+  Posted on <tt>{{ page.date | date_to_string }}</tt>; tags: {% for tag in page.tags %}<tt>{{ tag }}</tt>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
+</blockquote>
+
 {{ content }}
