--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -1,12 +1,5 @@
-﻿<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
-    <script src="/media/js/less-min.js"></script>
-  </head>
-  <body>
-    {{ content }}
-  </body>
-</html>
+---
+layout: base
+---
+
+{{ content }}
