added tron post

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:fb="http://www.facebook.com/2008/fbml">
   <head>
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
@@ -33,5 +33,7 @@
         Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>. Styled using <a href="http://github.com/cloudhead/less.js">less.js</a>. Hosted by <a href="http://github.com/">GitHub</a>.
       </div>
     </div>
+    <div id="fb-root"></div>
+    <script>window.fbAsyncInit=function(){FB.init({appId:"",status:true,cookie:true,xfbml:true});};(function(){var e=document.createElement('script');e.async=true;e.src=document.location.protocol+'//connect.facebook.net/en_US/all.js';document.getElementById('fb-root').appendChild(e);}());</script>
   </body>
 </html>
