--- a/media/css/main.less
+++ b/media/css/main.less
@@ -44,7 +44,12 @@ cite, code, tt {
   padding: 1px 2px;
 }
 
-/* Page Structure */
+/* Facebook buttons */
+.fb_edge_widget_with_comment {
+  top: 3px;
+}
+
+/* Page structure */
 body {
   > .wrapper {
     min-height: 100%;
