--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,6 +34,6 @@
       </div>
     </div>
     <div id="fb-root"></div>
-    <script>window.fbAsyncInit=function(){FB.init({appId:"",status:true,cookie:true,xfbml:true});};(function(){var e=document.createElement('script');e.async=true;e.src=document.location.protocol+'//connect.facebook.net/en_US/all.js';document.getElementById('fb-root').appendChild(e);}());</script>
+    <script>window.fbAsyncInit=function(){FB.init({appId:"108684282519237",status:true,cookie:true,xfbml:true});};(function(){var e=document.createElement('script');e.async=true;e.src=document.location.protocol+'//connect.facebook.net/en_US/all.js';document.getElementById('fb-root').appendChild(e);}());</script>
   </body>
 </html>
