--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
     <script src="/media/js/less-min.js"></script>
+    <script src="/media/js/ajs-min.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -33,7 +34,5 @@
         Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>. Styled using <a href="http://github.com/cloudhead/less.js">less.js</a>. Hosted by <a href="http://github.com/">GitHub</a>.
       </div>
     </div>
-    <div id="fb-root"></div>
-    <script>window.fbAsyncInit=function(){FB.init({appId:"108684282519237",status:true,cookie:true,xfbml:true});};(function(){var e=document.createElement('script');e.async=true;e.src=document.location.protocol+'//connect.facebook.net/en_US/all.js';document.getElementById('fb-root').appendChild(e);}());</script>
   </body>
 </html>
