modified like button position

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -44,11 +44,6 @@ cite, code, tt {
   padding: 1px 2px;
 }
 
-/* Facebook buttons */
-.fb_edge_widget_with_comment {
-  top: 3px;
-}
-
 /* Page structure */
 body {
   > .wrapper {
@@ -115,6 +110,13 @@ body {
               height: 16px;
               margin: 0 -2px -4px 2px;
               width: 16px;
+            }
+            .like {
+              display: inline-block;
+              position: relative;
+              .fb_edge_widget_with_comment {
+                top: 3px;
+              }
             }
         }
       }
