ajax load for categories

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,7 +19,11 @@
           <div class="main">
             {{ content }}
           </div>
-          <div class="sidebar"></div>
+          <div class="sidebar">
+            <div class="j_archives archives">
+              <div class="j_loader loader">Loading archives...</div>
+            </div>
+          </div>
           <div class="clear"></div>
         </div>
         <div class="clear"></div>
