moved some viles

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -33,7 +33,7 @@ ul > li {
 
 /* Code blocks */
 pre, cite, code, tt {
-  background: url(/media/images/bg-box.png) repeat scroll left top transparent;
+  background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
   border-bottom: 1px solid #ddd;
   color: #333;
   font: 0.95em 'Consolas','Deja Vu Sans Mono','Bitstream Vera Sans Mono',monospace;
@@ -50,11 +50,11 @@ cite, code, tt {
 /* Page structure */
 body {
   > .wrapper {
-    background: url(/media/images/body-pattern.png) repeat scroll left top #6b3;
+    background: url(/media/images/skin/body-pattern.png) repeat scroll left top #6b3;
     min-height: 100%;
     position: relative;
     > .header {
-      background: url(/media/images/body-pattern.png) repeat scroll left top #7ce;
+      background: url(/media/images/skin/body-pattern.png) repeat scroll left top #7ce;
       padding: 8px 0 0;
       position: relative;
       > .title {
@@ -71,7 +71,7 @@ body {
         }
       }
       > .flower {
-        background: url(/media/images/bg-flower.png) no-repeat scroll left bottom transparent;
+        background: url(/media/images/skin/bg-flower.png) no-repeat scroll left bottom transparent;
         bottom: 0px;
         height: 245px;
         position: absolute;
@@ -79,7 +79,7 @@ body {
         width: 280px;
       }
       > .grass {
-        background: url(/media/images/bg-grass.png) repeat-x scroll center bottom transparent;
+        background: url(/media/images/skin/bg-grass.png) repeat-x scroll center bottom transparent;
         height: 100px;
       }
     }
@@ -89,7 +89,7 @@ body {
         margin: 0 auto;
         width: 1000px;
         > .main {
-          background: url(/media/images/bg-box.png) repeat scroll left top transparent;
+          background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
           margin: 0 auto;
           padding: 0.5em 20px 20px;
           float: left;
@@ -126,7 +126,7 @@ body {
           float: right;
           width: 230px;
           > .archives {
-            background: url(/media/images/bg-box.png) repeat scroll left top transparent;
+            background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
             > .loader {
               background: url(/media/images/skin/ajax-loader-green.gif) no-repeat scroll 6px 8px transparent;
               padding: 2px 2px 4px 26px;
@@ -173,7 +173,7 @@ body {
       }
     }
     .footer {
-      background: url(/media/images/footer-pattern.png) repeat scroll left top #310;
+      background: url(/media/images/skin/footer-pattern.png) repeat scroll left top #310;
       bottom: 0;
       color: #fff;
       font: 13.34px Arial, Helvetica, sans-serif;
