--- a/media/css/main.less
+++ b/media/css/main.less
@@ -32,18 +32,18 @@ ul > li {
 }
 
 /* Code blocks */
-pre, cite, code, tt {
+pre, cite, code {
   background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
   border-bottom: 1px solid #ddd;
   color: #333;
   font: 0.95em 'Consolas','Deja Vu Sans Mono','Bitstream Vera Sans Mono',monospace;
   padding: 0.5em;
-  cite, code, tt {
+  cite, code {
       background: transparent;
       border-bottom: none;
   }
 }
-cite, code, tt {
+cite, code {
   padding: 1px 2px;
 }
 
