--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -6,8 +6,8 @@ layout: base
   <div class="post-preview">
     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
     <blockquote>
-      <span class="date"></span> posted on: <tt>{{ post.date | date_to_string }}</tt>;
-      <span class="tags"></span> tags: {% for tag in post.tags %}<tt>{{ tag }}</tt>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
+      <span class="date"></span> posted on: <code>{{ post.date | date_to_string }}</code>;
+      <span class="tags"></span> tags: {% for tag in post.tags %}<code>{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
       <span class="like">
         <fb:like href="http://aatiis.me{{ post.url }}" layout="button_count" show_faces="false" width="80" font="lucida grande"></fb:like>
       </span>
