added some sidebar elements

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <div class="header">
-        <h1 class="title"><a href="/">{Attila Ol&aacute;h}'s weblog</a></h1>
+        <h1 class="title"><a href="/">Attila O.'s weblog</a></h1>
         <div class="flower"></div>
         <div class="grass"></div>
       </div>
@@ -21,7 +21,22 @@
           </div>
           <div class="sidebar">
             <div class="j_archives archives">
+              <div class="header">Archives</div>
               <div class="j_loader loader">Loading archives...</div>
+            </div>
+            <div class="blogs">
+              <div class="header">Fellow bloggers</div>
+              <ul>
+                <li><a href="http://blog.notdot.net/">Nick's Blog</a></li>
+                <li><a href="http://www.codinghorror.com/blog/">Coding Horror</a></li>
+                <li><a href="http://37signals.com/svn/">Signal vs. Noise</a></li>
+              </ul>
+            </div>
+            <div class="facebook">
+              <div class="header">Facebook Page</div>
+              <div class="box">
+                <fb:like-box profile_id="108684282519237" width="232" stream="false" header="false"></fb:like-box>
+              </div>
             </div>
           </div>
           <div class="clear"></div>
