--- a/media/css/main.less
+++ b/media/css/main.less
@@ -125,11 +125,24 @@ body {
         > .sidebar {
           float: right;
           width: 230px;
-          > .archives {
+          > div {
             background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
+            margin: 0 0 10px;
+            > .header {
+              border-bottom: 1px dotted #3d3;
+              font-weight: bold;
+              margin: 0px 4px;
+              padding: 3px 0 3px 25px;
+            }
+          }
+          > .archives {
+            > .header {
+              background: url(/media/images/skin/icons/archives.png) no-repeat scroll 5px 5px transparent;
+            }
             > .loader {
-              background: url(/media/images/skin/ajax-loader-green.gif) no-repeat scroll 6px 8px transparent;
-              padding: 2px 2px 4px 26px;
+              background: url(/media/images/skin/ajax-loader-green.gif) no-repeat scroll 10px 8px transparent;
+              font-size: 12px;
+              padding: 3px 2px 3px 30px;
 
             }
             ul {
@@ -147,7 +160,7 @@ body {
             }
             > ul {
               font-size: 12px;
-              margin: 0 0 0 15px;
+              margin: 0 2px 0 20px;
               padding: 5px 0 5px 5px;
               > li {
                 background: url(/media/images/skin/icons/archives-folder.png) no-repeat scroll left 5px transparent;
@@ -169,6 +182,36 @@ body {
               }
             }
           }
+          > .blogs {
+            > .header {
+              background: url(/media/images/skin/icons/blog-arrow.png) no-repeat scroll 4px 6px transparent;
+            }
+            > ul {
+              font-size: 12px;
+              margin: 0 2px 0 20px;
+              padding: 5px 0 5px 5px;
+              > li {
+                background: url(/media/images/skin/icons/blog-small.png) no-repeat scroll left 4px transparent;
+                list-style-type: none;
+                margin: 0 0 5px -10px;
+                padding: 0 0 0 16px;
+              }
+            }
+          }
+        > .facebook {
+          > .header {
+              background: url(/media/images/skin/icons/facebook-page.png) no-repeat scroll 4px 7px transparent;
+          }
+          > .box {
+            background: url("/media/images/skin/bg-box.png") repeat scroll left top transparent;
+            position: relative;
+            overflow: hidden;
+            > .fb_iframe_widget {
+              top: -2px;
+              left: -1px;
+            }
+          }
+        }
         }
       }
     }
