--- a/media/css/main.less
+++ b/media/css/main.less
@@ -27,6 +27,12 @@ ul > li {
 .clear {
   clear: both;
 }
+.center {
+  text-align: center;
+}
+.white {
+  background-color: white !important;
+}
 .hidden {
   display: none;
 }
@@ -99,6 +105,11 @@ body {
           }
           h2 {
             font-size: 1.25em;
+          }
+          img {
+            background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
+            padding: 4px;
+            border: 1px solid white;
           }
           .date {
             background: url(/media/images/skin/icons/date.png) no-repeat scroll left top transparent;
