--- a/media/css/main.less
+++ b/media/css/main.less
@@ -70,7 +70,7 @@ body {
         padding: 0.7em 0 0.3em;
         text-align: left;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
-        width: 1000px;
+        width: 960px;
         a {
           color: inherit;
           text-decoration: inherit;
@@ -93,18 +93,24 @@ body {
       padding: 0 10px 120px 10px;
       > .content {
         margin: 0 auto;
-        width: 1000px;
+        width: 960px;
         > .main {
           background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
           margin: 0 auto;
           padding: 0.5em 20px 20px;
           float: left;
-          width: 720px;
+          width: 680px;
           h1 {
             font-size: 1.5em;
           }
           h2 {
             font-size: 1.25em;
+          }
+          blockquote {
+            margin: 1em 0;
+          }
+          .summary {
+            margin: 1em 0 1em 40px;
           }
           img {
             background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
