--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
     <script src="/media/js/less-min.js"></script>
-    <script src="/media/js/ajs-min.js"></script>
+    <script src="/media/js/ajs-src.js"></script>
   </head>
   <body>
     <div class="wrapper">
