--- a/media/css/main.less
+++ b/media/css/main.less
@@ -165,7 +165,7 @@ body {
               margin: 0 2px 0 20px;
               padding: 5px 0 5px 5px;
               > li {
-                background: url(/media/images/skin/icons/blog-small.png) no-repeat scroll left 4px transparent;
+                background: url(/media/images/skin/icons/blog-small.png) no-repeat scroll left 3px transparent;
                 list-style-type: none;
                 margin: 0 0 5px -10px;
                 padding: 0 0 0 16px;
@@ -245,13 +245,13 @@ body {
   }
   li {
     list-style: none;
-    background: url(/media/images/skin/treeview/treeview-default-line.gif) 0 0 no-repeat;
+    background: url(/media/images/skin/treeview/treeview-default-line.gif) left top no-repeat;
     margin: 0;
     padding: 3px 0 2px 16px;
     a { text-decoration: none; }
     .folder, .file { padding: 0 0 2px 18px; display: inline-block; }
-    .folder { background: url(/media/images/skin/treeview/folder.gif) 0 -1px no-repeat; }
-    .file { background: url(/media/images/skin/treeview/file.gif) 0 1px no-repeat; line-height: 125%; }
+    .folder { background: url(/media/images/skin/treeview/folder.gif) left -1px no-repeat; }
+    .file { background: url(/media/images/skin/treeview/file.gif) left 1px no-repeat; line-height: 125%; }
     li.post + li.post {
       margin-top: -5px;
     }
@@ -262,11 +262,11 @@ body {
       }
     }
   }
-  li.expandable .folder { background: url(/media/images/skin/treeview/folder-closed.gif) 0 -1px no-repeat; }
-  li.collapsable, li.expandable { background-position: 0 -176px; }
-  li.last { background-position: 0 -1766px }
+  li.expandable .folder { background: url(/media/images/skin/treeview/folder-closed.gif) left -1px no-repeat; }
+  li.collapsable, li.expandable { background-position: left -176px; }
+  li.last { background-position: left -1766px }
   li.lastCollapsable, li.lastExpandable { background-image: url(/media/images/skin/treeview/treeview-default.gif); }  
-  li.lastCollapsable { background-position: 0 -111px }
+  li.lastCollapsable { background-position: left -111px }
   li.lastExpandable { background-position: -32px -67px }
 
   .hitarea {
@@ -278,7 +278,7 @@ body {
     cursor: pointer;
   }
   .expandable-hitarea { background-position: -80px -3px; }
-  div.lastCollapsable-hitarea, div.lastExpandable-hitarea { background-position: 0; }
+  div.lastCollapsable-hitarea, div.lastExpandable-hitarea { background-position: left top; }
 
   .hover { color: red; cursor: pointer; }
 }
