--- a/media/css/main.less
+++ b/media/css/main.less
@@ -181,8 +181,9 @@ body {
           }
           > .box {
             background: url("/media/images/skin/bg-box.png") repeat scroll left top transparent;
-            position: relative;
+            height: 252px;
             overflow: hidden;
+            position: relative;
             > .fb_iframe_widget {
               top: -2px;
               left: -1px;
@@ -281,4 +282,131 @@ body {
   div.lastCollapsable-hitarea, div.lastExpandable-hitarea { background-position: left top; }
 
   .hover { color: red; cursor: pointer; }
+}
+
+/* github.com style (c) Vasily Polovnyov <vast@whiteants.net> */
+
+pre {
+  code {
+    display: block;
+    color: #000;
+    background: url("/media/images/skin/bg-box.png") repeat scroll left top transparent;
+  }
+
+  .comment,
+  .template_comment,
+  .diff .header,
+  .javadoc {
+    color: #998;
+    font-style: italic;
+  }
+
+  .keyword,
+  .css .rule .keyword,
+  .winutils,
+  .javascript .title,
+  .lisp .title,
+  .subst {
+    color: #000;
+    font-weight: bold;
+  }
+
+  .number,
+  .hexcolor {
+    color: #40a070;
+  }
+
+  .string,
+  .attribute .value,
+  .phpdoc,
+  .tex .formula {
+    color: #d14;
+  }
+
+  .title,
+  .id {
+    color: #900;
+    font-weight: bold;
+  }
+
+  .javascript .title,
+  .lisp .title,
+  .subst {
+    font-weight: normal;
+  }
+
+  .class .title,
+  .tex .command {
+    color: #458;
+    font-weight: bold;
+  }
+
+  .tag,
+  .css .keyword,
+  .html .keyword,
+  .tag .title,
+  .django .tag .keyword {
+    color: #000080;
+    font-weight: normal;
+  }
+
+  .attribute,
+  .variable,
+  .instancevar,
+  .lisp .body {
+    color: #008080;
+  }
+
+  .regexp {
+    color: #009926;
+  }
+
+  .class {
+    color: #458;
+    font-weight: bold;
+  }
+
+  .symbol,
+  .ruby .symbol .string,
+  .ruby .symbol .keyword,
+  .ruby .symbol .keymethods,
+  .lisp .keyword,
+  .tex .special {
+    color: #990073;
+  }
+
+  .builtin,
+  .built_in,
+  .lisp .title {
+    color: #0086b3;
+  }
+
+  .preprocessor,
+  .pi,
+  .doctype,
+  .shebang,
+  .cdata {
+    color: #999;
+    font-weight: bold;
+  }
+
+  .deletion {
+    background: #fdd;
+  }
+
+  .addition {
+    background: #dfd;
+  }
+
+  .diff .change {
+    background: #0086b3;
+  }
+
+  .chunk {
+    color: #aaa;
+  }
+
+  .tex .formula {
+    opacity: 0.5;
+  }
 }
