added bc meta tag

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:fb="http://www.facebook.com/2008/fbml">
   <head>
     <meta charset="utf-8" />
+    <meta name="blogcatalog" content="9BC9991366" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
     <script src="/media/js/less-min.js"></script>
