first post for september

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -50,8 +50,8 @@
         <ul>
           <li>&copy; 2010. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 Unported License</a>.</li>
           <li><a href="/">home</a></li>
-          <li><a href="http://github.com/aatiis">me @ github</a></li>
-          <li><a href="mailto:attilaolah@gmail.com">contact</a></li>
+          <li><a href="http://github.com/aatiis" rel="me">me @ github</a></li>
+          <li><a href="mailto:attilaolah@gmail.com" rel="me">contact</a></li>
         </ul>
         Pages created using <a href="http://github.com/mojombo/jekyll">jekyll</a>.
         Styled using <a href="http://github.com/cloudhead/less.js">less.js</a> &amp; <a href="http://wiki.github.com/stubbornella/oocss/grids">oocss grids</a>.
