--- a/media/css/main.less
+++ b/media/css/main.less
@@ -26,6 +26,9 @@ h1, h2, h3, h4, h5, h6, a, a:link, a:visited {
     text-decoration: inherit;
   }
 }
+ul, ol {
+  margin: 0 0 0 2em;
+}
 a:hover, a:active {
   color: #f30;
 }
