--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,8 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/media/css/oocss.css" type="text/css" />
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
+    <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="/rss.xml" />
     <script src="/media/js/less-min.js"></script>
     <script src="/media/js/ajs-min.js"></script>
   </head>
