--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/media/css/oocss.css" type="text/css" />
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="/rss.xml" />
+    <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="http://feeds.feedburner.com/aatiisme" />
     <script src="/media/js/less-min.js"></script>
     <script src="/media/js/ajs-min.js"></script>
   </head>
