fixed feed title, removed bc meta tag

--- a/_layouts/rss.html
+++ b/_layouts/rss.html
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0">
   <channel>
-    <title>{{ page.title }}</title>
+    <title>Attila O.&apos;s weblog</title>
     <link>http://aatiis.me/</link>
     <description>My personal blog.</description>
     <language>en-us</language>
